C++_Solutions/IOI/IOI_2018/Day_1/compiling_error.txt
D:\GitHub\programming-olympiad\C++_Solutions\IOI_2018\Day_1\Problem_1_Combo_IDEA_1.cpp: In function 'std::vector<std::__cxx11::basic_string<char> > possible_candidates(const string&, const int&)':
D:\GitHub\programming-olympiad\C++_Solutions\IOI_2018\Day_1\Problem_1_Combo_IDEA_1.cpp:60:45: error: no matching function for call to 'copy(std::vector<std::__cxx11::basic_string<char> >&, std::vector<std::__cxx11::basic_string<char> >::iterator, std::vector<std::__cxx11::basic_string<char> >::iterator)'
     copyall = copy(all,all.begin(),all.end());
                                             ^
In file included from c:\mingw\lib\gcc\mingw32\8.2.0\include\c++\bits\char_traits.h:39,
                 from c:\mingw\lib\gcc\mingw32\8.2.0\include\c++\ios:40,
                 from c:\mingw\lib\gcc\mingw32\8.2.0\include\c++\ostream:38,
                 from c:\mingw\lib\gcc\mingw32\8.2.0\include\c++\iostream:39,
                 from D:\GitHub\programming-olympiad\C++_Solutions\IOI_2018\Day_1\Problem_1_Combo_IDEA_1.cpp:1:
c:\mingw\lib\gcc\mingw32\8.2.0\include\c++\bits\stl_algobase.h:446:5: note: candidate: 'template<class _II, class _OI> _OI std::copy(_II, _II, _OI)'
     copy(_II __first, _II __last, _OI __result)
     ^~~~
c:\mingw\lib\gcc\mingw32\8.2.0\include\c++\bits\stl_algobase.h:446:5: note:   template argument deduction/substitution failed:
D:\GitHub\programming-olympiad\C++_Solutions\IOI_2018\Day_1\Problem_1_Combo_IDEA_1.cpp:60:45: note:   deduced conflicting types for parameter '_II' ('std::vector<std::__cxx11::basic_string<char> >' and '__gnu_cxx::__normal_iterator<std::__cxx11::basic_string<char>*, std::vector<std::__cxx11::basic_string<char> > >')
     copyall = copy(all,all.begin(),all.end());
                                             ^
In file included from c:\mingw\lib\gcc\mingw32\8.2.0\include\c++\bits\locale_facets.h:48,
                 from c:\mingw\lib\gcc\mingw32\8.2.0\include\c++\bits\basic_ios.h:37,
                 from c:\mingw\lib\gcc\mingw32\8.2.0\include\c++\ios:44,
                 from c:\mingw\lib\gcc\mingw32\8.2.0\include\c++\ostream:38,
                 from c:\mingw\lib\gcc\mingw32\8.2.0\include\c++\iostream:39,
                 from D:\GitHub\programming-olympiad\C++_Solutions\IOI_2018\Day_1\Problem_1_Combo_IDEA_1.cpp:1:
c:\mingw\lib\gcc\mingw32\8.2.0\include\c++\bits\streambuf_iterator.h:292:5: note: candidate: 'template<class _CharT> typename __gnu_cxx::__enable_if<std::__is_char<_Tp>::__value, std::ostreambuf_iterator<_CharT> >::__type std::copy(std::istreambuf_iterator<_CharT>, std::istreambuf_iterator<_CharT>, std::ostreambuf_iterator<_CharT>)'
     copy(istreambuf_iterator<_CharT> __first,
     ^~~~
c:\mingw\lib\gcc\mingw32\8.2.0\include\c++\bits\streambuf_iterator.h:292:5: note:   template argument deduction/substitution failed:
D:\GitHub\programming-olympiad\C++_Solutions\IOI_2018\Day_1\Problem_1_Combo_IDEA_1.cpp:60:45: note:   'std::vector<std::__cxx11::basic_string<char> >' is not derived from 'std::istreambuf_iterator<_CharT>'
     copyall = copy(all,all.begin(),all.end());
                                             ^
D:\GitHub\programming-olympiad\C++_Solutions\IOI_2018\Day_1\Problem_1_Combo_IDEA_1.cpp:70:23: error: no matching function for call to 'std::vector<std::__cxx11::basic_string<char> >::push_back(const value_type&)'
     all.push_back(p[i]);
                       ^
In file included from c:\mingw\lib\gcc\mingw32\8.2.0\include\c++\vector:64,
                 from D:\GitHub\programming-olympiad\C++_Solutions\IOI_2018\Day_1\Problem_1_Combo_IDEA_1.cpp:3:
c:\mingw\lib\gcc\mingw32\8.2.0\include\c++\bits\stl_vector.h:1074:7: note: candidate: 'void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = std::__cxx11::basic_string<char>; _Alloc = std::allocator<std::__cxx11::basic_string<char> >; std::vector<_Tp, _Alloc>::value_type = std::__cxx11::basic_string<char>]'
       push_back(const value_type& __x)
       ^~~~~~~~~
c:\mingw\lib\gcc\mingw32\8.2.0\include\c++\bits\stl_vector.h:1074:7: note:   no known conversion for argument 1 from 'const value_type' {aka 'const char'} to 'const value_type&' {aka 'const std::__cxx11::basic_string<char>&'}
c:\mingw\lib\gcc\mingw32\8.2.0\include\c++\bits\stl_vector.h:1090:7: note: candidate: 'void std::vector<_Tp, _Alloc>::push_back(std::vector<_Tp, _Alloc>::value_type&&) [with _Tp = std::__cxx11::basic_string<char>; _Alloc = std::allocator<std::__cxx11::basic_string<char> >; std::vector<_Tp, _Alloc>::value_type = std::__cxx11::basic_string<char>]'
       push_back(value_type&& __x)
       ^~~~~~~~~
c:\mingw\lib\gcc\mingw32\8.2.0\include\c++\bits\stl_vector.h:1090:7: note:   no known conversion for argument 1 from 'const value_type' {aka 'const char'} to 'std::vector<std::__cxx11::basic_string<char> >::value_type&&' {aka 'std::__cxx11::basic_string<char>&&'}
D:\GitHub\programming-olympiad\C++_Solutions\IOI_2018\Day_1\Problem_1_Combo_IDEA_1.cpp:71:5: error: 'allcopy' was not declared in this scope
     allcopy.clear();
     ^~~~~~~
D:\GitHub\programming-olympiad\C++_Solutions\IOI_2018\Day_1\Problem_1_Combo_IDEA_1.cpp: At global scope:
D:\GitHub\programming-olympiad\C++_Solutions\IOI_2018\Day_1\Problem_1_Combo_IDEA_1.cpp:77:34: error: expected ')' before ';' token
 void filter(vector<string> allpos; vector<string> newpos){
            ~                     ^
                                  )
D:\GitHub\programming-olympiad\C++_Solutions\IOI_2018\Day_1\Problem_1_Combo_IDEA_1.cpp:77:57: error: expected initializer before ')' token
 void filter(vector<string> allpos; vector<string> newpos){
                                                         ^
D:\GitHub\programming-olympiad\C++_Solutions\IOI_2018\Day_1\Problem_1_Combo_IDEA_1.cpp: In function 'std::__cxx11::string guess_sequence(int)':
D:\GitHub\programming-olympiad\C++_Solutions\IOI_2018\Day_1\Problem_1_Combo_IDEA_1.cpp:96:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
